--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,8 +1,147 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Teko:wght@300..700&display=swap");
+/* SCSS HEX */
+/* SCSS HSL */
+/* SCSS RGB */
+/* SCSS Gradient */
+/* SCSS HEX */
+/* SCSS HSL */
+/* SCSS RGB */
+/* SCSS Gradient */
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background: linear-gradient(270deg, #ffbe0b, #fb5607, #ff006e, #8338ec, #3a86ff);
+}
+header .dropbtn {
+  background-color: #FFEDE1;
+  color: rgb(0, 0, 0);
+  padding: 16px;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 10%;
+  cursor: pointer;
+}
+header .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #FFEDE1;
+  min-width: 160px;
+  font-weight: bold;
+  border-radius: 5%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+header .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+header .dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+header .dropdown:hover .dropdown-content {
+  display: block;
+}
+header .dropdown-content {
+  display: none;
+}
+header .dropdown:hover .dropdown-content {
+  display: block;
+}
+header span {
+  font-size: 26px;
+}
+
+ul {
+  list-style: none;
+  display: none;
+}
+ul li {
+  padding-right: 25px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-family: Josefin Sans, sans-serif;
+}
+
+main {
+  padding-top: 150px;
+  min-height: 100vh;
+}
+
+.banner {
+  width: 80%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.banner .banner__heading {
+  padding-bottom: 55px;
+  text-align: center;
+}
+.banner .banner__text {
+  padding-bottom: 60px;
+  text-align: center;
+}
+.banner .banner__img {
+  padding-bottom: 50px;
+  height: auto;
+  width: 75%;
+  align-self: center;
+  border-radius: 10px;
+}
+
+@media (min-width: 576px) {
+  header span {
+    font-size: 30px;
+  }
+  header nav ul {
+    display: flex;
+  }
+  header nav ul li {
+    font-size: 20px;
+  }
+  .dropdown {
+    display: none;
+  }
+  .banner__heading {
+    font-size: 40px;
+  }
+  .banner__text {
+    font-size: 20px;
+  }
+}
+@media (min-width: 768px) {
+  header span {
+    font-size: 34px;
+  }
+  header nav ul li {
+    font-size: 24px;
+  }
+  .banner__heading {
+    font-size: 44px;
+  }
+  .banner__text {
+    font-size: 24px;
+  }
 }
 
 /*# sourceMappingURL=main-style.css.map */
