--- a/styles/header.scss
+++ b/styles/header.scss
@@ -6,8 +6,8 @@ header {
     align-items: center;
     height: 100px;
     width: 100%;
-    position: fixed;
-    top: 0;
+    // position: fixed;
+    // top: 0;
     background: $gradient-left;
 
     .dropbtn {
