--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -13,7 +13,10 @@ header {
   align-items: center;
   height: 100px;
   width: 100%;
+  position: fixed;
+  top: 0;
   background: linear-gradient(270deg, #ffbe0b, #fb5607, #ff006e, #8338ec, #3a86ff);
+  z-index: 1;
 }
 header .dropbtn {
   background-color: #FFEDE1;
@@ -57,11 +60,11 @@ header span {
   font-size: 26px;
 }
 
-ul {
+.dropdown__list {
   list-style: none;
   display: none;
 }
-ul li {
+.dropdown__list li {
   padding-right: 25px;
   font-size: 14px;
   font-weight: bold;
@@ -78,7 +81,7 @@ html {
 }
 
 main {
-  padding-top: 150px;
+  padding-top: 250px;
   min-height: 100vh;
 }
 
@@ -91,18 +94,22 @@ main {
   margin: 0 auto;
 }
 .banner .banner__heading {
-  padding-bottom: 55px;
+  padding-bottom: 100px;
   text-align: center;
 }
 .banner .banner__text {
-  padding-bottom: 60px;
+  padding-bottom: 100px;
   text-align: center;
 }
 .banner .banner__img {
-  height: auto;
-  width: 75%;
+  height: 500px;
+  width: 85%;
   align-self: center;
   border-radius: 10px 10px 0 0;
+  background-image: url("/portfolio/picture/tisch.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .performance {
@@ -118,25 +125,25 @@ main {
 }
 .performance__container .performance__heading {
   text-align: center;
-  padding-top: 200px;
+  padding-top: 300px;
 }
 .performance__container .performance__text {
   width: 60%;
   text-align: center;
   padding-top: 25px;
-  padding-bottom: 250px;
+  padding-bottom: 450px;
 }
 
 .sticky {
   position: relative;
-  top: -100px;
+  top: -150px;
 }
 
 .card__container {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 800px;
+  height: 700px;
   width: 80%;
   text-align: center;
   margin: auto;
@@ -155,17 +162,112 @@ main {
 }
 .card__container .card__languages,
 .card__container .card__tools_head {
-  color: rgb(58, 134, 255);
+  color: rgb(131, 56, 236);
+}
+.card__container .card__list,
+.card__container .card__speaks {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  list-style: none;
+  padding: 10px 0 10px 0;
+}
+.card__container .card__list li,
+.card__container .card__speaks li {
+  padding: 10px 0 10px 0;
+}
+
+.projects {
+  background-color: rgb(255, 190, 11);
+  width: 100%;
+}
+.projects .projects__heading {
+  padding-top: 150px;
+  padding-bottom: 300px;
+  text-align: center;
+}
+
+.project-cards {
+  position: relative;
+}
+
+.grid-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  display: grid;
+  gap: 25px;
+  padding: 25px 50px 25px 50px;
+  border: none;
+}
+
+.grid-item {
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8;
+}
+
+.contact {
+  background-color: rgb(255, 190, 11);
+  width: 100%;
+}
+.contact .contact__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+.contact .contact__container .contact__heading {
+  text-align: center;
+  padding-bottom: 50px;
+}
+.contact .contact__container .contact__text {
+  text-align: center;
+  padding-bottom: 50px;
+  width: 50%;
+}
+.contact .contact__container .contact__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+}
+.contact .contact__container .contact__form input, .contact .contact__container .contact__form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0 10px 0;
+  border: none;
+  border-radius: 5px;
+}
+.contact .contact__container .contact__form input[type=submit] {
+  background-color: rgb(131, 56, 236);
+  color: white;
+  cursor: pointer;
+}
+.contact .contact__container .contact__form button {
+  width: 30%;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(131, 56, 236);
+  color: white;
+  font-weight: bold;
 }
 
 @media (min-width: 576px) {
   header span {
-    font-size: 30px;
+    font-size: 32px;
   }
-  header nav ul {
+  .dropdown__list {
     display: flex;
   }
-  header nav ul li {
+  .dropdown__list li {
     font-size: 20px;
   }
   .dropdown {
@@ -180,12 +282,17 @@ main {
   .p_text {
     font-size: 20px;
   }
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 200px;
+    gap: 25px;
+  }
 }
 @media (min-width: 768px) {
   header span {
-    font-size: 34px;
+    font-size: 36px;
   }
-  header nav ul li {
+  .dropdown__list li {
     font-size: 24px;
   }
   .banner__heading {
@@ -196,6 +303,9 @@ main {
   }
   .p_text {
     font-size: 24px;
+  }
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
