--- a/styles/header.scss
+++ b/styles/header.scss
@@ -58,6 +58,7 @@ header {
 
     span {
             font-size: 26px;
+            color: white;
         } 
     }
 
@@ -73,6 +74,7 @@ header {
 
         a {
           text-decoration: none;
+          color: white;
         }
     }
 
