responsive und diverse änderungen

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -57,7 +57,8 @@ header {
       }
 
     span {
-            font-size: 26px;
+            font-family: "Dancing Script", sans-serif;
+            font-size: 30px;
             color: white;
         } 
     }
